sort.pancake.GatesPancake.scala.error
Erreur de compilation :
GatesPancake:91: error: method casG is defined twice
  conflicting symbols both originated in file 'plm.runtime97.GatesPancake'
def casG():Boolean{
    ^GatesPancake:75: error: method casE is defined twice
  conflicting symbols both originated in file 'plm.runtime97.GatesPancake'
def casE():Boolean{
    ^